--- a/index.css
+++ b/index.css
@@ -14,3 +14,12 @@
 .submit {
 	text-align: center;
 }
+
+#assignment_number {
+	text-align: center;
+}
+
+#title {
+	text-align: center;
+	font-weight: bold;
+}
